Switch to using maven for Patchouli

--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -110,11 +110,11 @@ dependencies {
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.0'
     compile 'com.github.jengelman.gradle.plugins:shadow:4.0.4'
 
-	compile fg.deobf("vazkii.patchouli:Patchouli:1.16.4-50:api")
-    compile fg.deobf("vazkii.patchouli:Patchouli:1.16.4-50")
+	compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.16.4-53.3:api")
+    compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.16.4-53.3")
     runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.16.5-4.0.5.1")
     compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.16.5-4.0.5.1:api")
-    compile fg.deobf("curse.maven:mAa-406360:3651870")
+    compileOnly fg.deobf("curse.maven:mAa-406360:3651870")
 	
     shade 'com.eliotlash.molang:molang:18'
     shade 'com.eliotlash.mclib:mclib:18'
