--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -1,7 +1,3 @@
-import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
-import groovy.json.JsonSlurper
-import groovy.json.JsonOutput
-
 buildscript {
     repositories {
         maven { url = "https://maven.minecraftforge.net/" }
@@ -28,7 +24,11 @@ apply plugin: 'com.matthewprenger.cursegradle'
 apply from: "https://raw.githubusercontent.com/SizableShrimp/Forge-Class-Remapper/main/classremapper.gradle"
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: "com.modrinth.minotaur"
+
+import groovy.json.JsonSlurper
+import groovy.json.JsonOutput
 import com.modrinth.minotaur.dependencies.ModDependency
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
@@ -44,8 +44,7 @@ configurations {
 }
 
 minecraft {
-    mappings channel: 'official', version: '1.19.2'
-    //mappings channel: 'parchment', version: '2022.07.17-1.18.2'
+    mappings channel: 'parchment', version: '2022.09.04-1.19.2'
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
     runs {
         client {
@@ -101,23 +100,23 @@ repositories {
     maven { url "https://maven.blamejared.com" }
     maven { url "https://minecraft.curseforge.com/api/maven/" }
     maven { url "https://maven.cloudsmith.io/geckolib3/geckolib/" }
-	maven { url "https://cfa2.cursemaven.com" }
+	maven { url "https://cursemaven.com" }
     maven { url "https://plugins.gradle.org/m2/" }
     mavenCentral()
 }
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.19.2-43.0.0'
-    library 'com.eliotlash.molang:molang:18'
-    library 'com.eliotlash.mclib:mclib:18'
+    library 'com.eliotlash.molang:molang:19'
+    library 'com.eliotlash.mclib:mclib:19'
     library(project(':geckolib-core')) {
         exclude group: 'org.apache.commons'
     }
     library group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
     library group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.0'
 
-    shade 'com.eliotlash.molang:molang:18'
-    shade 'com.eliotlash.mclib:mclib:18'
+    shade 'com.eliotlash.molang:molang:19'
+    shade 'com.eliotlash.mclib:mclib:19'
     shade(project(':geckolib-core')) {
         exclude group: 'org.apache.commons'
     }
