--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -1,5 +1,3 @@
-import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
-
 buildscript {
     repositories {
         maven { url = 'https://maven.minecraftforge.net/' }
@@ -7,13 +5,14 @@ buildscript {
         jcenter()
         gradlePluginPortal()
         mavenCentral()
+        maven { url = 'https://maven.parchmentmc.org' }
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
-        classpath "com.wynprice.cursemaven:CurseMaven:2.1.5"
-        classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.4'
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
+        classpath "gradle.plugin.com.github.jengelman.gradle.plugins:shadow:7.0.0"
         classpath 'gradle.plugin.com.matthewprenger:CurseGradle:1.4.0'
-        classpath "com.modrinth.minotaur:Minotaur:2.1.2"
+        classpath "com.modrinth.minotaur:Minotaur:2.+"
+        classpath 'org.parchmentmc:librarian:1.+'
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
@@ -22,12 +21,13 @@ apply plugin: 'maven-publish'
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'java'
 apply plugin: 'com.matthewprenger.cursegradle'
-apply plugin: "com.wynprice.cursemaven"
+apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: "com.modrinth.minotaur"
 
 import groovy.json.JsonSlurper
 import groovy.json.JsonOutput
 import com.modrinth.minotaur.dependencies.ModDependency
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
 version = project.mod_version
 group = project.maven_group
@@ -40,7 +40,7 @@ configurations {
 }
 
 minecraft {
-    mappings channel:"official", version:"1.16.5"
+    mappings channel: 'parchment', version: '2022.03.06-1.16.5'
     
     accessTransformer = file(
         'src/main/resources/META-INF/accesstransformer.cfg'
@@ -91,7 +91,7 @@ minecraft {
 repositories {
     maven { url "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/" }
     maven { url "https://maven.enginehub.org/repo/" }
-	maven { url "https://cfa2.cursemaven.com" }
+	maven { url "https://cursemaven.com" }
     maven { url "https://maven.blamejared.com" }
     maven { url "https://minecraft.curseforge.com/api/maven/" }
 	maven { url "https://jitpack.io" }
@@ -103,12 +103,13 @@ repositories {
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.16.5-36.1.2'
-    compile 'com.eliotlash.molang:molang:18'
-    compile 'com.eliotlash.mclib:mclib:18'
-    compile project(':geckolib-core')
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
-    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.0'
-    compile 'com.github.jengelman.gradle.plugins:shadow:4.0.4'
+    compileOnly 'com.eliotlash.molang:molang:19'
+    compileOnly 'com.eliotlash.mclib:mclib:19'
+    compileOnly(project(':geckolib-core')) {
+        exclude group: 'org.apache.commons'
+    }
+    compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
+    compileOnly group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.0'
 
 	compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.16.4-53.3:api")
     compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.16.4-53.3")
@@ -116,8 +117,8 @@ dependencies {
     compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.16.5-4.0.5.1:api")
     compileOnly fg.deobf("curse.maven:mAa-406360:3651870")
 	
-    shade 'com.eliotlash.molang:molang:18'
-    shade 'com.eliotlash.mclib:mclib:18'
+    shade 'com.eliotlash.molang:molang:19'
+    shade 'com.eliotlash.mclib:mclib:19'
     shade project(':geckolib-core')
     shade group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
     shade group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.0'
