--- a/Forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/Forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -2,6 +2,19 @@ public net.minecraft.client.renderer.model.ModelRenderer field_78154_a
 public net.minecraft.client.renderer.model.ModelRenderer field_78804_l
 public net.minecraft.client.renderer.model.ModelRenderer field_228286_w_
 
+public net.minecraft.util.math.vector.Matrix4f field_226575_a_ # m00
+public net.minecraft.util.math.vector.Matrix4f field_226576_b_ # m01
+public net.minecraft.util.math.vector.Matrix4f field_226577_c_ # m02
 public net.minecraft.util.math.vector.Matrix4f field_226578_d_ # m03
+public net.minecraft.util.math.vector.Matrix4f field_226579_e_ # m10
+public net.minecraft.util.math.vector.Matrix4f field_226580_f_ # m11
+public net.minecraft.util.math.vector.Matrix4f field_226581_g_ # m12
 public net.minecraft.util.math.vector.Matrix4f field_226582_h_ # m13
+public net.minecraft.util.math.vector.Matrix4f field_226583_i_ # m20
+public net.minecraft.util.math.vector.Matrix4f field_226584_j_ # m21
+public net.minecraft.util.math.vector.Matrix4f field_226585_k_ # m22
 public net.minecraft.util.math.vector.Matrix4f field_226586_l_ # m23
+public net.minecraft.util.math.vector.Matrix4f field_226587_m_ # m30
+public net.minecraft.util.math.vector.Matrix4f field_226588_n_ # m31
+public net.minecraft.util.math.vector.Matrix4f field_226589_o_ # m32
+public net.minecraft.util.math.vector.Matrix4f field_226590_p_ # m33
