--- a/Forge/src/main/resources/META-INF/mods.toml
+++ b/Forge/src/main/resources/META-INF/mods.toml
@@ -11,7 +11,7 @@ logoFile="geckolib.png"
 credits="Gecko, Eliot, AzureDoom, DerToaster" 
 authors="Gecko, Eliot, AzureDoom, Chappie, DerToaster"
 description='''
-Geckolib is a forward-kinematic animation engine for Minecraft Java Edition, which lets you export bedrock animations and play them automatically. You can export bedrock animations from blockbench and apply them to entities with GeckoLib. Geckolib also supports sound keyframes, particle keyframes, and custom events. The library is currently available on Forge 1.12, 1.15, 1.16, and Fabric 1.16.
+GeckoLib is an animation engine for Minecraft Mods, with support for complex 3D keyframe-based animations, 30+ easings, concurrent animation support, sound and particle keyframes, event keyframes, and more.
 '''
 [[dependencies.geckolib3]]
     modId="forge"
@@ -22,6 +22,6 @@ Geckolib is a forward-kinematic animation engine for Minecraft Java Edition, whi
 [[dependencies.geckolib3]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.19,)"
+    versionRange="[1.19, 1.20)"
     ordering="NONE"
     side="BOTH"
