--- a/Fabric/core/build.gradle
+++ b/Fabric/core/build.gradle
@@ -1,3 +1,8 @@
+buildscript {
+    repositories {
+    	maven { url  = 'https://plugins.gradle.org/m2/' }
+    }
+}
 apply plugin: 'java'
 apply plugin: 'maven-publish'
 
@@ -17,6 +22,7 @@ repositories {
 dependencies {
     implementation 'com.eliotlash.molang:molang:19'
     implementation 'com.eliotlash.mclib:mclib:19'
+    implementation 'it.unimi.dsi:fastutil:8.4.0'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
 }
 
