--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -46,10 +46,11 @@ configurations {
 dependencies {
     // Minecraft/Fabric deps
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings( loom.layered() {
-		officialMojangMappings()
-		parchment("org.parchmentmc.data:parchment-1.19.2:2022.08.14@zip")
-	})
+    mappings loom.officialMojangMappings()
+	//mappings( loom.layered() {
+	//	officialMojangMappings()
+	//	parchment("org.parchmentmc.data:parchment-1.19.2:2022.08.14@zip")
+	//})
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
@@ -74,7 +75,7 @@ dependencies {
         useJUnitPlatform()
     }
     implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
-    modCompileOnly "vazkii.patchouli:Patchouli:1.19.2-76-FABRIC"
+    //modCompileOnly "vazkii.patchouli:Patchouli:1.19.2-76-FABRIC"
 }
 
 shadowJar {
@@ -192,10 +193,10 @@ if (file('key.properties').exists()) {
     project {
         apiKey = curseProp.getProperty('curseKey')
         id = "388172"
-        releaseType = "release"
+        releaseType = "alpha"
         changelogType = 'text'
         changelog = file('changelog.txt')
-		addGameVersion("1.19.2")
+		addGameVersion("1.19.3")
         addGameVersion("Fabric")
         addGameVersion("Java 17")
 
@@ -224,10 +225,11 @@ if (file('key.properties').exists()) {
 		token = modrinthProp.getProperty('modrinthKey')
 		projectId = '8BmcQJ2H' 
 		versionNumber = project.mod_version 
-		versionName = 'Fabric 1.19.2'
+		versionName = 'Fabric 1.19.3'
 		uploadFile = remapJar 
 		changelog = rootProject.file("changelog.txt").text
-		gameVersions = ['1.19.2']
+		gameVersions = ['22w42a']
+		versionType = "alpha"
 		loaders = ['fabric']
 		dependencies { 
         	required.project "fabric-api"
