--- a/Fabric/gradle.properties
+++ b/Fabric/gradle.properties
@@ -2,16 +2,14 @@
 org.gradle.jvmargs=-Xmx3G
 
 # Minecraft
-minecraft_version=1.19.2
-geckolib_core_version=1.0.4a
+minecraft_version=22w42a
 
 # Fabric
-yarn_mappings=1.19.2+build.4
-loader_version=0.14.9
-fabric_version=0.60.0+1.19.2
+loader_version=0.14.10
+fabric_version=0.65.0+1.19.3
 
 # Mod Properties
-mod_version=3.1.26
+mod_version=3.1.27
 maven_group=software.bernie.geckolib
-archives_base_name=geckolib-fabric-1.19
+archives_base_name=geckolib-fabric-22w42a
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
