--- a/Quilt/build.gradle
+++ b/Quilt/build.gradle
@@ -83,6 +83,7 @@ shadowJar {
     duplicatesStrategy = 'exclude'
     exclude('it/**')
     exclude('META-INF/services/**')
+    exclude('com/google/**')
     relocate 'com.eliotlash', 'software.bernie.shadowed.eliotlash'
     relocate 'com.fasterxml', 'software.bernie.shadowed.fasterxml'
     classifier 'dev'
