--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -83,6 +83,8 @@ shadowJar {
     from sourceSets.main.output
     duplicatesStrategy = 'exclude'
     exclude('META-INF/services/**')
+    exclude('it/**')
+    exclude('com/google/**')
     relocate 'com.eliotlash', 'software.bernie.shadowed.eliotlash'
     relocate 'com.fasterxml', 'software.bernie.shadowed.fasterxml'
     classifier 'dev'
