Ported to Fabric and Updated to 1.19.3-pre1

--- a/Fabric/gradle.properties
+++ b/Fabric/gradle.properties
@@ -2,11 +2,11 @@
 org.gradle.jvmargs=-Xmx3G
 
 # Minecraft
-minecraft_version=22w45a
+minecraft_version=1.19.3-pre1
 
 # Fabric
 loader_version=0.14.10
-fabric_version=0.66.2+1.19.3
+fabric_version=0.67.0+1.19.3
 
 # Mod Properties
 mod_version=4.0.0
