--- a/Fabric/gradle.properties
+++ b/Fabric/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx3G
 
 # Minecraft
-minecraft_version=1.19.3-pre1
+minecraft_version=1.19.3-pre2
 
 # Fabric
 loader_version=0.14.10
-fabric_version=0.67.0+1.19.3
+fabric_version=0.67.1+1.19.3
 
 # Mod Properties
 mod_version=4.0.0
 maven_group=software.bernie.geckolib
-archives_base_name=geckolib-fabric-22w45a
+archives_base_name=geckolib-fabric-1.19.3-pre2
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
