--- a/Fabric/gradle.properties
+++ b/Fabric/gradle.properties
@@ -2,7 +2,7 @@
 org.gradle.jvmargs=-Xmx3G
 
 # Minecraft
-minecraft_version=1.19.3-rc2
+minecraft_version=1.19.3
 
 # Fabric
 loader_version=0.14.11
@@ -11,5 +11,5 @@ fabric_version=0.68.1+1.19.3
 # Mod Properties
 mod_version=4.0.0
 maven_group=software.bernie.geckolib
-archives_base_name=geckolib-fabric-1.19.3-rc2
+archives_base_name=geckolib-fabric-1.19.3
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
