--- a/Quilt/gradle.properties
+++ b/Quilt/gradle.properties
@@ -3,14 +3,14 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.parallel=true
 	
 # Minecraft
-minecraft_version=1.19.3-rc2
+minecraft_version=1.19.3
 
 # Quilt
 loader_version=0.18.1-beta.21
-qsl_version=4.0.0-alpha.6+1.19.3-rc1
+qsl_version=4.0.0-beta.1+1.19.3
 quilted_fapi_version=5.0.0-alpha.2+0.68.1-1.19.3
 
 # Mod Properties
 mod_version=4.0.0
 maven_group=software.bernie.geckolib
-archives_base_name=geckolib-quilt-1.19.3-rc2
+archives_base_name=geckolib-quilt-1.19.3
