--- a/Forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/Forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,6 +1,3 @@
 public net.minecraft.client.model.geom.ModelPart$Cube
 public net.minecraft.client.model.geom.ModelPart f_104212_ # cubes
-
-public com.mojang.math.Matrix4f f_27606_ # m03
-public com.mojang.math.Matrix4f f_27610_ # m13
-public com.mojang.math.Matrix4f f_27614_ # m23
+public net.minecraft.world.entity.Entity m_7939_()Lnet/minecraft/world/phys/Vec3; # getLeashOffset
