--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -31,12 +31,12 @@ repositories {
     mavenCentral()
     maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
     maven { url 'https://maven.blamejared.com' }
-	maven { url "https://cfa2.cursemaven.com" }
-    maven { url "https://maven.cloudsmith.io/geckolib3/geckolib/" }
+    maven { url "https://cfa2.cursemaven.com" }
+    maven { url "https://maven.parchmentmc.org/" }
     maven { url "https://plugins.gradle.org/m2/" }
     maven { url "https://maven.shedaniel.me/" }
-	maven { url = "https://ladysnake.jfrog.io/artifactory/mods" }
-	maven { url = "https://maven.terraformersmc.com/" }
+    maven { url = "https://ladysnake.jfrog.io/artifactory/mods" }
+    maven { url = "https://maven.terraformersmc.com/" }
 }
 
 configurations {
