--- a/Forge/gradle.properties
+++ b/Forge/gradle.properties
@@ -1,8 +1,9 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-mod_version=4.0.4
+mod_version=4.1.0
 # Basically forge automatically filters out jars with forge- in it as it assumes that's a forge jar, so its removed
-archives_base_name=geckolib-forge-1.19.3
+archives_base_name=geckolib-forge-1.19.4
+#why isn't this using the mc version on a property??
 geckolib_core_version=2.0
 maven_group=software.bernie.geckolib
