--- a/Quilt/gradle.properties
+++ b/Quilt/gradle.properties
@@ -1,16 +1,16 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.parallel=true
-	
+
 # Minecraft
-minecraft_version=1.19.3
+minecraft_version=1.19.4
 
 # Quilt
-loader_version=0.18.1-beta.21
-qsl_version=4.0.0-beta.1+1.19.3
-quilted_fapi_version=5.0.0-alpha.3+0.68.1-1.19.3
+loader_version=0.18.4-pre.3
+qsl_version=5.0.0-beta.1+1.19.4
+quilted_fapi_version=6.0.0-beta.1+0.75.3-1.19.4
 
 # Mod Properties
-mod_version=4.0.4
+mod_version=4.1.4
 maven_group=software.bernie.geckolib
-archives_base_name=geckolib-quilt-1.19.3
+archives_base_name=geckolib-quilt-1.19.4
