Fixes missing gradlew.bat and missing core gradle

--- a/Forge/.gitignore
+++ b/Forge/.gitignore
@@ -27,3 +27,9 @@ mcmodsrepo
 forge*changelog.txt
 build.bat
 *.bat
+
+# allow gradlew
+!core/gradle/wrapper
+!core/gradlew.bat
+!gradle/wrapper
+!gradlew.bat
