--- a/Forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/Forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -2,6 +2,12 @@ public net.minecraft.client.model.geom.ModelPart$Cube
 public net.minecraft.client.model.geom.ModelPart f_104212_ # cubes
 public net.minecraft.client.renderer.blockentity.SkullBlockRenderer f_173658_ # modelByType
 
+public net.minecraft.client.model.AgeableListModel f_102011_ # babyBodyScale
+public net.minecraft.client.model.AgeableListModel f_102007_ # scaleHead
+public net.minecraft.client.model.AgeableListModel f_102010_ # babyHeadScale
+public net.minecraft.client.model.AgeableListModel f_170338_ # babyYHeadOffset
+public net.minecraft.client.model.AgeableListModel f_170339_ # babyZHeadOffset
+
 public com.mojang.math.Matrix4f f_27606_ # m03
 public com.mojang.math.Matrix4f f_27610_ # m13
 public com.mojang.math.Matrix4f f_27614_ # m23
